5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1642_2449.log
== TEST (2019-04-17 12:56:37) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
conjunto_solucao = ((a*e) - (b*d) != 0)
x = ((c*e - b*f) / (ae - bd))
if (conjunto_solucao)
	print(x)
-- ERROR:
File "XXXX", line 9
    if (conjunto_solucao)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:58:13) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
conjunto_solucao = (
x = ((c*e - b*f) / (ae - bd))
if ((a*e) - (b*d) != 0))
	print(x)
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:58:57) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (ae - bd))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:00:06) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (ae - bd))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:00:19) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (ae - bd))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:03:59) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (ae - bd))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:04:33) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (ae - bd))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:04:42) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (ae - bd))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:05:12) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:08:05) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:08:24) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
-- ERROR:
File "XXXX", line 8
    x = ((c*e - b*f) / (ae - bd))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:12:03) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
	print((a*f - c*d) / (a*e - b*d))
else:
	print(())
-- OUTPUT:
()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:13:06) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
	print((a*f - c*d) / (a*e - b*d))
else:
	print(("Nao tem solucao"))

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:13:27) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
	print((a*f - c*d) / (a*e - b*d))
else:
	print(("Nao tem solucao"))

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:14:11) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
	print((a*f - c*d) / (a*e - b*d))
else:
	print(("Nao tem solucao"))

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 13:14:21) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
	print((a*f - c*d) / (a*e - b*d))
else:
	print(("Nao tem solucao"))

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:15:47) 
-- CODE:
# SISTEMA DE EQUAÇÕES DE DUAS VARIÁVEIS
a = float(input())
b = float(input())
c = float(input())
d = float(input())
e = float(input())
f = float(input())

if ((a*e) - (b*d) != 0):
	print((c*e - b*f) / (a*e - b*d))
	print((a*f - c*d) / (a*e - b*d))
else:
	print(("Nao tem solucao"))

-- EXECUTION TIME:
0.132422
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
